# Python-FastAPI

./: .gitignore  Dockerfile  README.md  main.py  models.py  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  test.yml
database/: database.py  db.py
docs/: DOKUMENTACJA_TECHNICZNA.md  DOKUMENTACJA_UZYTKOWNIKA.md  RBAC_GUIDE.md  WEBSOCKET.md  database.drawio
models/: models.py
repositories/: comment_repo.py  event_repo.py  friendship_repo.py  group_repo.py  message_repo.py  post_repo.py  profile_comment_repo.py  user_repo.py
routers/: admin_router.py  auth_routes.py  comment_router.py  event_router.py  example.py  example_router.py  friendship_router.py  group_router.py  message_router.py  post_router.py  profile_comment_router.py  user_router.py
services/: security.py  websocket_manager.py
tests/: conftest.py  test_auth_router.py  test_comment_repo.py  test_comment_router.py  test_error_handling.py  test_event_repo.py  test_event_router.py  test_friendship_repo.py  test_friendship_router.py  test_group_router.py  test_integration.py  test_main.py  test_message_router.py  test_performance.py  test_post_repo.py  test_post_router.py  test_security.py  test_user_repo.py  test_user_router.py  test_websocket.py
utils/: logging.py
